@@ -9,24 +9,24 @@ AUX live-2009.09.28-buildorder.patch 1060 RMD160 cd6a6c2e699eaae0c5b5a40959c988e
 AUX live-recursive.patch 433 RMD160 f70734114f7423f48693f71c5b0f0ae85c337090 SHA1 87526904f6e69696f6fbf41a2313f1a43c51871a SHA256 6347a54046cf02671666bf74a3dbb54ebb898adafe9670abecebe86e6d870288
 DIST live.2009.06.02.tar.gz 469471 RMD160 ddbe057ac4f47d66ee7c99ec3c4886fe97f06565 SHA1 a03ac47dc1b2a5e4745e30fc304af61675036782 SHA256 66c54241bfcc7ea42fe40e1c93739be79a3c065390c4163c0f2647ac45c24758
 DIST live.2011.01.24.tar.gz 480478 RMD160 2c029b276fc382f0e483fe769a021b2b280e8ed6 SHA1 94545798f1b700d6e30c4b132d7bcff4d5d14db8 SHA256 7c98cf1db4ba1015645f6e4f5f51442b0d54eb76a8f477737aded58a5dc2bd42
-EBUILD live-2009.06.02.ebuild 2547 RMD160 0f43b19c53d4c6be7f4643a961ba32a83a7ede5d SHA1 88e01d0a3498a6439249270deb4d642ab8cb4737 SHA256 8cbd9d36063f2acfe7728bcc2ad4dd8112b4fd9993caf60e03547fea0ab88bc3
-EBUILD live-2011.01.24.ebuild 3695 RMD160 ff5732ead05d88a7c67d5e55dfa99d0073ad207a SHA1 0c6e3899ebcf406f63b1496879528aba78fd6e83 SHA256 32341b8db1cab06624064b69b65e6b73ac22feb6280ea41e37558b1c200cd4cf
-MISC ChangeLog 17220 RMD160 f8667dc3e39a3cfda83bd662461aea1eac2185e7 SHA1 ff9e7cc70204c839189e639f3d42b6e0d63d5892 SHA256 d9e399a24691be1d20da84f4a17d0ddc9967c4d18d9beba33e5a515708ba7b9f
+EBUILD live-2009.06.02.ebuild 2549 RMD160 76d8f7c15a7a30d461d4454aaaaadc8dae45c348 SHA1 45399140d16fe98f857081b8842872165b793571 SHA256 4112e1f6bac3f02b62007fb5ff501bd1d0d3b1c337c8051a0b55fb714927309c
+EBUILD live-2011.01.24.ebuild 3736 RMD160 da17394e4e51a041e5bfe28e7e1e20e196b1470e SHA1 3bc0856690a88e508218514f2f5a18615211df73 SHA256 ef52b717ee4bf9ba8140998aedf9d658fa07811a14a2f8b62924a0aaffae25ea
+MISC ChangeLog 17436 RMD160 14afadd38cc08d83c36d4608f92836c59d36301d SHA1 25533fe308c0b627eaf424d22a08ea2ab07ea91f SHA256 d9f979c9ea3d0f0a4271610c10e91c86f9642119fc7b0ce9c1dcfb424140cd8c
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iQIcBAEBCAAGBQJNZIGrAAoJEHQ6UuhrqBBQ8vsQAJaUNQoKunZeJaYoNIPk6IF7
-UXNnT9gtDc90NS9x9X/18a10HdqxTRE4c5ZxVZZbBEdSy5QvYQIMZb26UD74RnHo
-I1eAPDi9Nqv8H2FSrA339vHDbUTmWQDnBo/+7yMPTg41IdGC9zSara3R1M9O+/fu
-eWyxf3ewLSHNnjaQaPW5P9PMECHsmLlZlSNnEVV9hJYhQEMxsDejY9shEKDHXGGg
-2IXP9DkyFjaZ650AntWyrP5pI0xAlT/3lXHtdxCXsQdVlTYHQA2wtXd3ZzCzp/It
-2yCoev7XU4dbeKNqqBDFlvriBi7hkR2h5ucjkdEx9BABGPjwW8OA6y6nZBl1P40W
-NCb2RJ/nJFbJFWBd22AzTC/LFV5924Rb5Hg8Q6CjAfhXaMbBFybqsLgQtooG0IMq
-D1UdMwCsVeSDlv6gHWhQCXbjahzwvo3JQ8qIIBIMx5UxEdlQgYjycTBPjnPUQ70X
-gstZ7ZhoSDljz0V7WpH6mP9m36LtRQAiFSFMrKeRYsD3hwiRRfGSM7lxaObHZxW2
-1gzDHeeUcssr3Nb3B2uiTnTDeKmdtP8v8/3EQ0Fb+BapFfwJ7KOtpVZfpblyzndY
-kWyO0gOoJ09Fsc2eHHmxD5KfbYnkyElirFDaEQNXF/CigjBDdC8VATRJTX0QAPXb
-xBMsfW08S2uBVwJqnpfQ
-=xY+s
+iQIcBAEBCAAGBQJNZIUyAAoJEHQ6UuhrqBBQGdUQAKmG5gJZbSUR6af43ZIIkkhv
+ziA4BRh7vNgD7usVndyGXBXvW/1R2wB0RsaXV4+tUt12vLCrWXjK1Qhkz8myozaM
+5F+IaagAdTnrPvB4ic4UnoYJzycPZZlaNsFolwsGylwCYg+LK7simNbeEvmHRWmB
+6luK+jZfzTCG3F+d8fDHv/IsxtAmeLTfTnhDOOaOBTka64uCYBk/Stm4tyuOkeqT
+Xcy9Yw3+4vUwzfgBMoBvruiKmdw4O5lxtPzDTtQHzusX3k7yjvNDpO9RB2qBSpC2
++QCW329tBsvRREuynk/t6BYlrKfHC5gOmLuRfjOkygzAXaz0CSdpQIbnMx+QImlS
+M13vU3M5aueSyYAhIYc/hvH/BI1NjJPecuqoPRbNNssOa4Zsnoluz6zImoBoP6om
+gsbBF9TAvc+T6lpbK9A62bCRwgs3aGHGWU5DayfMg9CYaGIaTdV5y2T7yvb4KBK/
+rcRPmxdAjNJEWds6y3TYgaEJpK6MVlUsu/6Wrt4MwkoX/AkCt41BEwGFChej4fds
+QOVhsTJ5LLB0s5IGvnEEDXPLc3/D5O5fgtyi2chKteNPqTZcguRQcfm3mS2+iIV4
+bjeQPxT+sQE1lc5TTGVrA8bETDG076lIgY1OQg5fpHdgiP4cjz9pa+ONk5mAhb3P
+/H5QdDrA9P8GdAJZh5tW
+=vs8T
 -----END PGP SIGNATURE-----
