@@ -1,4 +1,4 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/media-plugins/live/live-2009.06.02.ebuild,v 1.8 2010/01/06 16:55:17 ranger Exp $
 
@@ -15,7 +15,7 @@ SLOT="0"
 KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 sparc x86 ~x86-fbsd"
 IUSE="static-libs"
 
-DEPEND="sys-devel/libtool"
+DEPEND="sys-devel/libtool:2"
 RDEPEND=""
 
 S=${WORKDIR}/${PN}
